--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "larlarbooks",
   "homepage": "https://shaneswa06.github.io/larlarbooks",
   "version": "0.1.0",
-  "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "dependencies": {
@@ -463,15 +462,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ShaneSWA06/scp.git"
-  },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ShaneSWA06/scp/issues"
-  },
-  "homepage": "https://github.com/ShaneSWA06/scp#readme"
+  "license": "ISC"
 }
